--- a/video.html
+++ b/video.html
@@ -30,62 +30,55 @@
             <div class="slider-wrapper">
                 <div class="slider" id="imageSlider">
                     <div class="slide">
-                        <div class="video-container">
+                        <iframe width="100%" height="100%" src="https://youtu.be/kON2olrB-3I"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                    </div>
+                    <div class="slide">
+                        <iframe width="100%" height="100%" src="https://youtu.be/8xix_pRMi2Q"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                    </div>
+                    <div class="slide">
+                        <iframe width="100%" height="100%" src="https://youtu.be/R2U5QMdCeiI"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                    </div>
+                    <div class="slide">
+                        <iframe width="100%" height="100%" src="https://youtu.be/WLaQvOHnRFg"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                    </div>
+                    <div class="slide">
+                        <iframe width="100%" height="100%" src="https://youtu.be/atZWb8mlKXE"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                    </div>
+                    <div class="slide">
+                        <iframe width="100%" height="100%" src="https://youtu.be/FFRy11g99lc"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                    </div>
 
-                            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=FFRy11g99lc"
-                            title=" YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                        </iframe>
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="video-container">
-                            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=atZWb8mlKXE"
-                            title=" YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                        </iframe>
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="video-container">
-                            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=WLaQvOHnRFg"
-                            title=" YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="video-container">
-                            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=R2U5QMdCeiI"
-                            title=" YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="video-container">
-                            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=8xix_pRMi2Q"
-                            title=" YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                        </div>
-                    </div>
-                    <div class="slide">
-                        <div class="video-container">
-                            <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=8xix_pRMi2Q"
-                            title=" YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen>
-                        </div>
-                    </div>
                 </div>
             </div>
 
-            <button class="nav-button-carousel next" onclick="moveSlider(1)">&#10095;</button>
+            <button class="nav-button-carousel next" onclick="moveSlider(1)">❯</button>
         </div>
     </div>
+
 
     <footer class="footer-custom">
         <div class="container">
