--- a/sobre.html
+++ b/sobre.html
@@ -44,7 +44,8 @@
                 <img src="img/sobre/Imagem 3.jpg" alt="Imagem 3" class="img-fluid">
             </div>
         </div>
- <div class="image-box">
+          <div class="content-row">
+             <div class="image-box">
         <img src="img/sobre/Imagem 4.jpg" alt="Imagem 4" class="main-image">
     </div>
       
