--- a/sobre.html
+++ b/sobre.html
@@ -48,7 +48,7 @@
              <div class="image-box">
         <img src="img/sobre/Imagem 4.jpg" alt="Imagem 4" class="main-image">
     </div>
-      
+       </div>
 
     <footer class="footer-custom">
         <div class="container">
