--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
 
         <div class="content-row">
             <div class="text-box">
-                <p>Também publico vídeos de humor em formatos de sketch nas redes sociais do <a target="_blank" href="https://www.tiktok.com/@costagonzalezz"><strong>TikTok</strong></a> e <a target="_blank" href="https://www.instagram.com/costagonzalezz/profilecard"><strong>Instagram</strong></a>, lá consigo transmitir como acredito que uma piada é contada de maneira audiovisual pela minha visão estética, levando em consideração o fator de ser plataforma.</p>
+                <p>Também publico vídeos de humor em formatos de sketch nas redes sociais do <a target="_blank" href="https://www.tiktok.com/@costagonzalezz"><strong><p id="sublinhado>TikTok</p></strong></a> e <a target="_blank" href="https://www.instagram.com/costagonzalezz/profilecard"><strong>Instagram</strong></a>, lá consigo transmitir como acredito que uma piada é contada de maneira audiovisual pela minha visão estética, levando em consideração o fator de ser plataforma.</p>
             </div>
             <div class="image-box">
                 <img src="img/sobre/Imagem 3.jpg" alt="Imagem 3" class="img-fluid">
